--- a/Clases/Clase6-Desafio3/styles.css
+++ b/Clases/Clase6-Desafio3/styles.css
@@ -1,92 +1,92 @@
+/* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    background-image: url("camo-image.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    color: #333;
-  }
-  
-  h1 {
-    text-align: center;
-    margin-bottom: 30px;
-    padding-top: 8px;
-  }
-  
-  form {
-    max-width: 400px;
-    margin: 0 auto;
-    background-color: #fafafa;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  label {
-    display: block;
-    margin-top: 16px;
-    margin-bottom: 4px;
-    color: #333;
-    width: 220px;
-  }
-  
-  .newsletter-checkbox {
-    display: block;
-    margin-top: 14px;
-    margin-bottom: 10px;
-    color: #333;
-    width: 420px;
-  }
-  
-  .terms-checkbox {
-    display: block;
-    margin-top: 14px;
-    margin-bottom: 10px;
-    color: #333;
-    width: 420px;
-  }
-  
-  input[type="text"],
-  input[type="password"],
-  input[type="date"],
-  button {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    border: 1px solid #bdbcbc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  .date-input {
-    position: relative;
-    display: flex;
-    align-items: center;
-  }
-  
-  .date-input input {
-    flex-grow: 1;
-    padding-right: 40px;
-  }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  background-image: url("camo-image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: #333;
+}
 
-  button {
-    margin-top: 18px;
-    background-color: #0f700f;
-    color: white;
-    cursor: pointer;
-    font-size: 16px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-  }
-  
-  button:hover {
-    background-color: #69b927;
-  }
-  
-  .error {
-    color: red;
-    margin-top: 5px;
-  }
-  
+/* Estilos del encabezado */
+h1 {
+  text-align: center;
+  margin-bottom: 30px;
+  padding-top: 8px;
+}
+
+/* Estilos del formulario */
+form {
+  max-width: 400px;
+  margin: 0 auto;
+  background-color: #fafafa;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilos de las etiquetas */
+label {
+  display: block;
+  margin-top: 16px;
+  margin-bottom: 4px;
+  color: #333;
+  width: 220px;
+}
+
+/* Estilos del checkbox del boletín de noticias */
+.newsletter-checkbox, .terms-checkbox {
+  display: block;
+  margin-top: 14px;
+  margin-bottom: 10px;
+  color: #333;
+  width: 420px;
+}
+
+/* Estilos de los campos de entrada de texto, contraseña y fecha */
+input[type="text"],
+input[type="password"],
+input[type="date"],
+button {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  border: 1px solid #bdbcbc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+/* Estilos del campo de fecha */
+.date-input {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.date-input input {
+  flex-grow: 1;
+  padding-right: 40px;
+}
+
+/* Estilos del botón de envío */
+button {
+  margin-top: 18px;
+  background-color: #0f700f;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+}
+
+button:hover {
+  background-color: #69b927;
+}
+
+/* Estilos para mensajes de error */
+.error {
+  color: red;
+  margin-top: 5px;
+}
