--- a/Clases/Clase6-Desafio3/styles.css
+++ b/Clases/Clase6-Desafio3/styles.css
@@ -48,6 +48,7 @@ label {
 input[type="text"],
 input[type="password"],
 input[type="date"],
+input[type="email"],
 button {
   width: 100%;
   padding: 10px;
