--- a/Evaluativo JavaScript/styles.css
+++ b/Evaluativo JavaScript/styles.css
@@ -9,10 +9,8 @@ La función debe poseer un filtro por fecha, por calificación y por id
 de usuario. Si no se envía un userId, la función deberá devolver todas las películas que cumplan
 las condiciones de los filtros de fecha y calificación para todos los usuarios existentes */
 
-
-
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', Arial, sans-serif;
     margin: 0;
     padding: 0;
   }
@@ -25,29 +23,45 @@ body {
   }
   
   main {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin: 0 auto;
+    max-width: 1200px;
+  }
+  
+  .left-section,
+  .middle-section,
+  .right-section {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 16px;
   }
   
   .left-section {
-    flex: 1;
-    padding: 20px;
+    margin-left: 4px;
   }
   
-  .right-section {
-    flex: 3;
-    padding: 20px;
-  }
-  
-  h2 {
-    margin-top: 0;
+  .section-title {
+    margin-top: 20px;
+    font-weight: 600;
   }
   
   form div {
     margin-bottom: 10px;
   }
   
+  .from-date-input {
+    margin-bottom: 8px;
+  }
+
+  
   label {
     display: block;
+    margin-top: 4px;
+    margin-bottom: 6px;
+    font-weight: 600;
   }
   
   input[type="date"],
@@ -56,7 +70,14 @@ body {
     padding: 5px;
   }
   
+  input[type="date"]::before {
+    content: attr(placeholder) !important;
+    color: #888;
+  }
+  
   button {
+    border-radius: 10%;
+    margin-top: 16px;
     padding: 10px 20px;
     background-color: #333;
     color: #fff;
@@ -64,9 +85,12 @@ body {
     cursor: pointer;
   }
   
-  #carousel {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 20px;
+  /* Estilos para las imágenes de las películas */
+  #movieList img {
+    margin-top: 8px;
+    margin-bottom: 8px;
+    width: 100px;
+    height: 140px;
+    object-fit: cover;
   }
   
