--- a/Clases/Clase12-Desafio5/clase12-desafio5/src/styles/index.css
+++ b/Clases/Clase12-Desafio5/clase12-desafio5/src/styles/index.css
@@ -40,12 +40,12 @@ align-items: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 100vh;
 }
 
 .loading-message{
   font-size: 2.5rem;
-
+align-items: center;
 }
 
 .list-container{
@@ -56,3 +56,4 @@ align-items: center;
 .list li {
   margin-bottom: 16px;
 }
+
