solving title issue

--- a/Clases/Clase12-Desafio5/clase12-desafio5/src/styles/index.css
+++ b/Clases/Clase12-Desafio5/clase12-desafio5/src/styles/index.css
@@ -40,7 +40,7 @@ align-items: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
 }
 
 .loading-message{
@@ -56,4 +56,3 @@ align-items: center;
 .list li {
   margin-bottom: 16px;
 }
-
