--- a/Clases/Clase12-Desafio5/clase12-desafio5/src/styles/index.css
+++ b/Clases/Clase12-Desafio5/clase12-desafio5/src/styles/index.css
@@ -1,26 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-
-:root {
-
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
 body {
-  font-family: "Poppins", sans-serif;
-  display: flex;
+  background-color: #181818;
+  color: #fafafa;
+  display: grid;
   place-items: center;
   min-height: 100vh;
+}
+
+.loading-message{
+  font-size: 30px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .main-section-father{
@@ -31,28 +19,17 @@ body {
 }
 
 .title {
-align-items: center;
-  font-size: 3.2em;
-  line-height: 1.1;
+  letter-spacing: 1px ;
+  font-size: 30px;
+  font-family: 'Roboto', sans-serif;
 }
 
-.loading{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+.list {
+  margin-top: 4px;
+  font-family: 'Roboto', sans-serif;
 }
 
-.loading-message{
-  font-size: 2.5rem;
-align-items: center;
-}
-
-.list-container{
-  margin-left: 30px;
-}
-
-
-.list li {
-  margin-bottom: 16px;
+.items{
+  margin-top: 8px;
+  letter-spacing: .3px ;
 }
